--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -3,6 +3,6 @@
 == Contents ==
 
  # [http://code.google.com/p/jxmpp-bot/wiki/Introduction Introduction]
- # Plugins list
+ # [http://code.google.com/p/jxmpp-bot/wiki/PluginsList Plugins list]
  # Core API
  # Plugins API 
