--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -4,7 +4,7 @@
 
  * [Introduction Introduction] 
  * [PluginsList Plugins list] 
- * [CoreAPI Core`*` API]
- * [PluginsAPI Plugins`*` API] 
+ * [CoreAPI Core API]
+ * [PluginsAPI Plugins API] 
  * [Development Development]
   * [DevOverview Overview]
