Edited wiki page through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -3,6 +3,7 @@
 == Contents ==
 
  * [Introduction Introduction] 
+ * [SstemCommands System commands]
  * [PluginsList Plugins list] 
  * [CoreAPI Core API]
  * [PluginsAPI Plugins API] 
