--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -3,7 +3,7 @@
 == Contents ==
 
  * [Introduction Introduction] 
- * [SstemCommands System commands]
+ * [SystemCommands System commands]
  * [PluginsList Plugins list] 
  * [CoreAPI Core API]
  * [PluginsAPI Plugins API] 
