--- a/wiki/SystemCommands.wiki
+++ b/wiki/SystemCommands.wiki
@@ -15,7 +15,8 @@
  = List of system commands =
 
 ----
- * *Register user*
+
+ ==Register user==
 
  Attempts to register new user with given JID and access level. Registered user user will be put into local bot's database and granted corresponding access level. You must have access level more then than 40000 in order to register new users. If you will try to grant access level to user greater then you are, error will be generated
  
@@ -24,7 +25,24 @@
  _*Output (s):*_ _ok_
 
  _*Output (e):*_ {_error message_}
+
 ----
- * *Grant access*
+
+ ==Set access level==
 
  Changes access level for given user. 
+
+----
+ ==Drop user==
+
+----
+ ==Add user jid==
+
+----
+ ==Drop user jid==
+
+----
+ ==Set user real name==
+
+----
+ ==Describe user==
