Edited wiki page through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -5,6 +5,9 @@
  * [Introduction Introduction] 
  * [CommandSyntax Command syntax]
  * [SystemCommands System commands]
+  * [UserManagementCommands User management commands]
+  * [PermissionCheckingCommands Access level commands]
+  * [BotAdminCommands Admin bot commands]
  * [PluginsList Plugins list] 
  * [CoreAPI Core API]
  * [PluginsAPI Plugins API] 
