--- a/wiki/UserManagementCommands.wiki
+++ b/wiki/UserManagementCommands.wiki
@@ -10,11 +10,14 @@ Add your content here.
 
  Attempts to register new user with given JID and access level. Registered user user will be put into local bot's database and granted corresponding access level. You must have access level more then than 40000 in order to register new users. If you will try to grant access level to user greater then you are, error will be generated
  
- _*Syntax:*_ _reg_user_ {_usr`_`jid_} {_access`_`level_} `[`_real_name_`]`
+ _*Syntax:*_ 
+  _reg_user_ {_usr`_`jid_} {_access`_`level_} `[`_real_name_`]`
 
- _*Output (s):*_ _ok_
+ _*Output (s):*_ 
+  _ok_
 
- _*Output (e):*_ {_error message_}
+ _*Output (e):*_ 
+  {_error message_}
 
 ----
  ==Drop user==
@@ -30,5 +33,8 @@ Add your content here.
 
 ----
  ==Describe user==
+
+ _*Output (s):*_  
+  {_Field Name_}  :  {_Field Value_}  _*\n*_  {_Field Name_}  :  {_Field Value_}  _*\n*_ ...
 
  _Note: Join vcard info with user's db info. Also output whether user is registered or not_
