Edited wiki page through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -14,4 +14,5 @@
  * [Development Development]
   * [DevOverview Overview]
   * [BotLifecycle Bot lifecycle]
+   * [Initialization Initialization]
   * [UsersTable Users table]
