Edited wiki page through web user interface.

--- a/wiki/BotLifecycle.wiki
+++ b/wiki/BotLifecycle.wiki
@@ -1,12 +1,17 @@
 #summary Describes jxmpp-bot lifecycle
 
- = Activity diagram =
+= Activity diagram =
 
- _Put activity diagram here_
+http://img16.imageshack.us/img16/9259/mainlifecycleactivity.png
 
- = Description =
+= Description =
 
- _Put description here_
+After bot process has been started up [Initialization initialization] occurs. Then using provided initialization information, bot attempts to connect to remote xmpp server.
+
+If connection is established, bot attempts to join groupchat, otherwise error information will be written into bot application log. 
+
+If bot has successfully joined groupchat, it starts its main loop.
+
+Each iteration bot waits until new message will be recieved from xmpp server. If message has been arrived
 
  
-
