Edited wiki page through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -3,6 +3,7 @@
 == Contents ==
 
  * [Introduction Introduction] 
+ * [BotConfig Configuration]
  * [CommandSyntax Command syntax]
  * [SystemCommands System commands]
   * [UserManagementCommands User management commands]
