Edited wiki page through web user interface.

--- a/wiki/BotConfig.wiki
+++ b/wiki/BotConfig.wiki
@@ -6,5 +6,5 @@ _Put sample here in code block_
 
 = Parameters =
 
- * Reconnect timeout
+ * *Reconnect timeout*
  Specifies timeout after which bot will attempt to establish connection with xmpp server.
